@@ -1,3 +1,8 @@
+2008-10-15	Brian Tarricone <bjt23@cornell.edu>
+
+	* xfce4-session/xfsm-client.c: Grab the GList pointer to iterate
+	  over rather than using g_queue_peek_nth (); a little faster.
+
 2008-10-12	Brian Tarricone <bjt23@cornell.edu>
 
 	* xfce4-session/xfsm-manager.c: Return a useful error string from
